[gd_scene load_steps=4 format=3 uid="uid://cybpqousersgn"]

[ext_resource type="Script" uid="uid://bvdg8obwfwmlh" path="res://scripts/ui/game_ui.gd" id="1"]
[ext_resource type="Shader" uid="uid://df3247lpv4nih" path="res://shaders/glass_ui.gdshader" id="2"]

[sub_resource type="ShaderMaterial" id="glass_material"]
shader = ExtResource("2")

[node name="GameUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1")

[node name="TopBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 60.0
grow_horizontal = 2
mouse_filter = 2

[node name="Panel" type="Panel" parent="TopBar"]
material = SubResource("glass_material")
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="TopBar"]
layout_mode = 2

[node name="ResourcePanel" type="MarginContainer" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="Resources" type="HBoxContainer" parent="TopBar/HBox/ResourcePanel"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="GoldRow" type="HBoxContainer" parent="TopBar/HBox/ResourcePanel/Resources"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/GoldRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ’°"

[node name="Value" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/GoldRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 1

[node name="WoodRow" type="HBoxContainer" parent="TopBar/HBox/ResourcePanel/Resources"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/WoodRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸªµ"

[node name="Value" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/WoodRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 1

[node name="StoneRow" type="HBoxContainer" parent="TopBar/HBox/ResourcePanel/Resources"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/StoneRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸª¨"

[node name="Value" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/StoneRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0"
vertical_alignment = 1

[node name="PopulationRow" type="HBoxContainer" parent="TopBar/HBox/ResourcePanel/Resources"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="Icon" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/PopulationRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "ðŸ‘¥"

[node name="Value" type="Label" parent="TopBar/HBox/ResourcePanel/Resources/PopulationRow"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "0/10"
vertical_alignment = 1

[node name="TimerPanel" type="MarginContainer" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 8

[node name="Time" type="Label" parent="TopBar/HBox/TimerPanel"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MenuButton" type="Button" parent="TopBar/HBox"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 18
text = "â‰¡ MENU"

[node name="BottomBar" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -160.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2

[node name="Panel" type="Panel" parent="BottomBar"]
material = SubResource("glass_material")
layout_mode = 2

[node name="HBox" type="HBoxContainer" parent="BottomBar"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PortraitPanel" type="MarginContainer" parent="BottomBar/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="BottomBar/HBox/PortraitPanel"]
layout_mode = 2

[node name="Portrait" type="TextureRect" parent="BottomBar/HBox/PortraitPanel/VBox"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 1
stretch_mode = 5

[node name="UnitName" type="Label" parent="BottomBar/HBox/PortraitPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "No Selection"
horizontal_alignment = 1

[node name="CommandPanel" type="MarginContainer" parent="BottomBar/HBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="CommandGrid" type="GridContainer" parent="BottomBar/HBox/CommandPanel"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 8
columns = 5

[node name="MinimapPanel" type="MarginContainer" parent="BottomBar/HBox"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBox" type="VBoxContainer" parent="BottomBar/HBox/MinimapPanel"]
layout_mode = 2

[node name="MinimapLabel" type="Label" parent="BottomBar/HBox/MinimapPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "MINIMAP"
horizontal_alignment = 1

[node name="MinimapRect" type="ColorRect" parent="BottomBar/HBox/MinimapPanel/VBox"]
custom_minimum_size = Vector2(180, 180)
layout_mode = 2
size_flags_horizontal = 4
color = Color(0.1, 0.1, 0.15, 0.5)

[node name="DebugText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = -180.0
offset_right = 316.0
offset_bottom = -180.0
grow_vertical = 0
mouse_filter = 2
theme_override_colors/default_color = Color(0, 1, 0.4, 1)
theme_override_font_sizes/normal_font_size = 12
bbcode_enabled = true
fit_content = true
scroll_active = false

[node name="LoadingScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.08, 0.95)

[node name="CenterContainer" type="CenterContainer" parent="LoadingScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBox" type="VBoxContainer" parent="LoadingScreen/CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="LoadingLabel" type="Label" parent="LoadingScreen/CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 48
text = "Loading..."
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="LoadingScreen/CenterContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Preparing game..."
horizontal_alignment = 1

[connection signal="pressed" from="TopBar/HBox/MenuButton" to="." method="_on_menu_button_pressed"]
